<resources>
    <string name="app_name">example-android</string>
    <string name="text_login">Login</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="text_button_enter">Entrar</string>
    <string name="text_button_register">Registrar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="img_logo">Imagem da logo</string>
    <string name="title_modal">Seja bem vindo</string>
    <string name="description_modal">Agora que você é um especialista React Native vamos começar conhecendo nosso app nativo.</string>
    <string name="image_description">Imagem de fundo</string>
    <string name="button_modal">Vamos começar</string>
</resources>