<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textStyle="bold" />

    <com.devmeist3r.example_android.components.APPButton
        android:id="@+id/buttonEnter"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_button_enter"
        android:textAllCaps="true" />

    <com.devmeist3r.example_android.components.APPButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_button_register"
        android:textAllCaps="true"
        app:variant="secondary" />

</LinearLayout>